Fix chart container infinite height growth: add fixed height constraints, chart wrapper, and proper CSS bounds

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -82,7 +82,9 @@
                             <button class="chart-btn" data-period="30d">30D</button>
                         </div>
                     </div>
-                    <canvas id="performanceChart"></canvas>
+                    <div class="chart-wrapper">
+                        <canvas id="performanceChart"></canvas>
+                    </div>
                 </div>
 
                 <div class="chart-container">
