--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypto Trading Bot Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="rejected-signals.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -152,6 +153,59 @@
                     </div>
                     <div class="portfolio-positions" id="portfolio-positions">
                         <!-- Portfolio positions will be populated here -->
+                    </div>
+                </div>
+            </section>
+
+            <!-- Rejected Signals Section -->
+            <section class="rejected-signals-row">
+                <div class="rejected-signals-container">
+                    <div class="section-header">
+                        <h3><i class="fas fa-exclamation-triangle"></i> Rejected Trading Signals</h3>
+                        <div class="rejected-stats">
+                            <span class="stat-item">
+                                <i class="fas fa-ban"></i>
+                                <span id="total-rejected">0</span> Total
+                            </span>
+                            <span class="stat-item">
+                                <i class="fas fa-clock"></i>
+                                <span id="hourly-rejected">0</span> Last Hour
+                            </span>
+                            <span class="stat-item">
+                                <i class="fas fa-chart-line"></i>
+                                $<span id="missed-gains">0.00</span> Potential
+                            </span>
+                        </div>
+                        <button class="refresh-btn" onclick="refreshRejectedSignals()" title="Refresh rejected signals">
+                            <i class="fas fa-sync-alt"></i>
+                        </button>
+                    </div>
+                    <div class="rejected-signals-content">
+                        <div class="rejection-types-summary">
+                            <h4>Rejection Reasons</h4>
+                            <div class="rejection-types-grid" id="rejection-types-grid">
+                                <!-- Rejection type counts will be populated here -->
+                            </div>
+                        </div>
+                        <div class="rejected-signals-table">
+                            <table id="rejected-signals-table">
+                                <thead>
+                                    <tr>
+                                        <th>Time</th>
+                                        <th>Symbol</th>
+                                        <th>Side</th>
+                                        <th>Price</th>
+                                        <th>Confidence</th>
+                                        <th>Expected Return</th>
+                                        <th>Rejection Reason</th>
+                                        <th>Missed Gain</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="rejected-signals-tbody">
+                                    <!-- Rejected signals will be populated here -->
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </section>
