Enhanced Dashboard UX: Scrollable Rejected Signals & Smart Portfolio Display with Active Orders Tracking

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -195,6 +195,22 @@
                     <div class="portfolio-chart">
                         <canvas id="portfolioChart"></canvas>
                     </div>
+                    <div class="portfolio-summary">
+                        <div class="portfolio-stats">
+                            <div class="stat-item">
+                                <span class="stat-label">Available Balance</span>
+                                <span class="stat-value" id="available-balance">$0.00</span>
+                            </div>
+                            <div class="stat-item">
+                                <span class="stat-label">Active Positions</span>
+                                <span class="stat-value" id="active-positions">0</span>
+                            </div>
+                            <div class="stat-item">
+                                <span class="stat-label">Orders in Motion</span>
+                                <span class="stat-value" id="orders-in-motion">0</span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="portfolio-positions" id="portfolio-positions">
                         <!-- Portfolio positions will be populated here -->
                     </div>
